Changed to Mybatis generic dao, xml mapper. Added Dao test.

--- a/Jira2Db/example-config.properties
+++ b/Jira2Db/example-config.properties
@@ -1,5 +1,9 @@
 
-driver=org.postgresql.Driver
-url=jdbc:postgresql://server/dbname
-username=foo
-password=bar
+db.driver=org.postgresql.Driver
+db.url=jdbc:postgresql://server/dbname
+db.username=user
+db.password=pass
+
+jira.server.uri=http://localhost:8080/jira
+jira.username=admin
+jira.password=pass
