--- a/Jira2Db/pom.xml
+++ b/Jira2Db/pom.xml
@@ -36,5 +36,10 @@
   		<artifactId>mybatis</artifactId>
   		<version>3.1.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>commons-cli</groupId>
+  		<artifactId>commons-cli</artifactId>
+  		<version>1.2</version>
+  	</dependency>
   </dependencies>
 </project>
