--- a/Jira2Db/pom.xml
+++ b/Jira2Db/pom.xml
@@ -42,19 +42,17 @@
 			<version>1.2</version>
 		</dependency>
 	</dependencies>
-	<pluginManagement>
+	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.2</version>
 				<configuration>
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>org.sample.App</mainClass>
+							<mainClass>com.gordcorp.jira2db.App</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
@@ -67,6 +65,14 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
 		</plugins>
-	</pluginManagement>
+	</build>
 </project>
