Adding property to also include deletions in the sync

--- a/example-config.properties
+++ b/example-config.properties
@@ -8,3 +8,6 @@ jira.server.uri=http://localhost:8080/jira
 jira.username=admin
 jira.password=pass
 jira.pollrate.seconds=3
+
+#Sync deletions as well? 
+jira.sync-deletions=1
