Adding description for properties file

--- a/example-config.properties
+++ b/example-config.properties
@@ -12,5 +12,5 @@ jira.pollrate.seconds=3
 #Sync deletions as well? 
 jira.sync-deletions=1
 
-#When in --forever mode, exceptions are ignored
+#When in --forever mode, ignore exceptions?
 continue-on-exception=0
