--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,6 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.gordcorp</groupId>
 	<artifactId>Jira2Db</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>Jira2Db</name>
 	<dependencies>
 		<dependency>
@@ -81,4 +80,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	<version>1.0</version>
 </project>
